Characterize exported project build properties
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>