@@ -2,6 +2,7 @@ package org.alice.netbeans;
 
 import org.junit.Test;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.Set;
 import java.util.zip.ZipFile;
@@ -27,6 +28,23 @@ public class Alice3ProjectTemplateWizardIteratorTest {
         assertNotNull(entry, zipFile.getEntry(entry));
       }
       assertNull(zipFile.getEntry("ProjectTemplate/nbproject/project.properties"));
+    }
+  }
+
+  @Test
+  public void projectTemplateBuildPropertiesDeclareAliceLibraryContract() throws Exception {
+    Path archive = Path.of("target/classes/org/alice/netbeans/ProjectTemplate.zip");
+
+    try (ZipFile zipFile = new ZipFile(archive.toFile())) {
+      String properties = new String(
+          zipFile.getInputStream(zipFile.getEntry("nbproject/project.properties")).readAllBytes(),
+          StandardCharsets.UTF_8);
+
+      assertTrue(properties.contains("javac.release = 21"));
+      assertTrue(properties.contains("javac.classpath = \\\n    ${libs.Alice3Library.classpath}"));
+      assertTrue(properties.contains("main.class = AliceJavaFXLauncher"));
+      assertTrue(properties.contains("-Dorg.alice.ide.rootDirectory=\"${libs.Alice3Library.src}_root\""));
+      assertTrue(properties.contains("--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"));
     }
   }
 
